# wayrs-client-transport-virtgpu

./: .gitignore  Cargo.toml  gen_bindings.sh
examples/: triangle.rs  triangle_async.rs
src/: bindings.rs  lib.rs
